# classification

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements-train.txt  requirements.txt  uwsgi.ini
.github/workflows/: build_and_push_to_dockerhub.yml  linting.yml
app/: app.py  classifier.py  engine.py  settings.py  test_model.py  train.py
app/train/: model_validation.py  pre_processing.py  run.py  train_model.py
azure_ml/: .env.example  README.md  component.yaml  pipeline.yaml  run.sh
