[tool.poetry]
name = "app"
version = "1.0.0"
description = ""
authors = []
license = "EUPL-1.2"
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.*"

[tool.poetry.group.train]
optional = true

[tool.poetry.group.train.dependencies]
Django = "^3.2"
joblib = "^1.3.2"
matplotlib = "^3.8.1"
nltk = "^3.8.1"
pandas = "^2.1.3"
scikit-learn = "^1.3.2"
psutil = "^5.9.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
