[project]
name = "app"
version = "1.0.0"
description = ""
authors = []
license = "EUPL-1.2"
readme = "README.md"
requires-python = "3.11.*"

dependencies = [
    "joblib (>=1.3.2,<2.0.0)",
    "nltk (>=3.9,<4.0.0)",
    "psutil (>=5.9.6,<6.0.0)",
    "scikit-learn (>=1.5.0,<2.0.0)",
    "pandas (>=1.5.3,<2.0.0)",
]

[tool.poetry.group.train]
optional = true

[tool.poetry.group.train.dependencies]
matplotlib = "^3.8.1"

[tool.poetry.group.web]
optional = true

[tool.poetry.group.web.dependencies]
flask = "^3.0.0"
flask-cors = "^5.0.0"
numpy = "^1.26.2"
uwsgi = "^2.0.23"


[tool.poetry.group.dev.dependencies]
isort = "^5.12.0"
flake8 = "^6.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
src_paths = ["app"]
